<resources>
    <string name="app_name">Todo-List_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addItem">addItem</string>
    <string name="no_data">No data</string>
    <string name="empty">Empty</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>