<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/MI_search"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <group
        android:checkableBehavior="single" >
        <item android:title="@string/sort_by"
               android:id="@+id/sortBy">
            <menu>
                <item android:title="@string/high"
                    android:id="@+id/high"/>
                <item android:title="@string/low"
                    android:id="@+id/low"/>
            </menu>
        </item>
    </group>
    <item android:title="@string/delete_all"
        android:id="@+id/MT_deleteAll"
        app:showAsAction="never"/>
</menu>